2008-08-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: Allocate arrays for
	64 parameters and re-adjust if needed. This makes it possible to
	allocate arrays once (well it's true for mono 2.0 class libs) and
	not for each method.

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsRule.cs: Avoid computing the method's CC if 
	the number of IL instructions is lower than the success threshold.

2008-08-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeepInheritanceTreeRule.cs: Fix case where we can't resolve
	a base type.
	* AvoidUnnecessarySpecializationRule.cs: Fix case where we can't
	resolve the least type.

2008-08-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: Small fixes for self-test

2008-08-04  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderUsingStopwatchRule.cs: Remove unneeded parameter on 
	IsGetNow method (self-test).
	* AvoidUnnecessarySpecializationRule.cs: Ignore methods where
	the parameters are dictated by an interface that the type implements.
	Also use new rocks to simplify rule and apply rule to itself ;-)

2008-08-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsRule.cs: Use automatic properties for all
	Threadhold properties. Reuse (i.e. Clear) 'targets' between rule
	executions (to reduce memory requirements).
	* ConsiderUsingStopwatchRule.cs: Use new rocks to simplify code.
	Rework parameter checks to consider Ref and Out parameters.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* ConsiderUsingStopwatchRule.cs: New. Rule to check if the use of
	DateTime could not be replaced with the use of a Stopwatch to 
	increase the code clarity. [committed for Cedric Vivier]
	* Gendarme.Rules.Maintainability.mdp: Update MD project files.
	* Makefile.am:  Add the rule and the test to the build.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>
